Fixed aside overflowing projects

--- a/hawk/public/stylesheets/garage/aside.css
+++ b/hawk/public/stylesheets/garage/aside.css
@@ -9,6 +9,7 @@
     padding: 25px;
     height: 100%;
     min-width: var(--garage-aside-width);
+    overflow-y: scroll;
     box-sizing: border-box;
     color: var(--grayOnDark);
 
@@ -42,6 +43,10 @@
     &__section {
         margin: 0 0 15px;
         font-size: 17px;
+
+        &:last-of-type {
+            margin-bottom: 52px;
+        }
     }
 
     &__project {
@@ -124,6 +129,14 @@
     }
 
     &__add {
-        margin-top: 25px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        min-width: inherit;
+        background: inherit;
+
+        &-button {
+            margin: 20px 0 20px 25px;
+        }
     }
 }
